--- a/shoply/customer_services.html
+++ b/shoply/customer_services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Service - Shoply</title>
-    <link rel="stylesheet" href="customer_service.css">
+    <link rel="stylesheet" href="customerservice.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -15,7 +15,7 @@
             <li><a href="men.html">Men</a></li>
             <li><a href="women.html">Women</a></li>
             <li><a href="accessories.html">Accessories</a></li>
-            <li><a href="customer-service.html">Customer Service</a></li>
+            <li><a href="customer_service.html">Customer Service</a></li>
         </ul>
         <a href="cart.html"><button class="shop-button">Cart</button></a>
     </nav>
